# fav_sync_bot

./: Cargo.toml  Containerfile  README.md
bot/: Cargo.toml
bot/src/: main.rs
